--- a/src/Simple.TabControl/Simple.TabControl.csproj
+++ b/src/Simple.TabControl/Simple.TabControl.csproj
@@ -8,7 +8,16 @@
     <Nullable>disable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RootNamespace>Simple</RootNamespace>
-    <AssemblyName>Simple</AssemblyName>    
+    <AssemblyName>Simple</AssemblyName>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>SimpleTabControl</PackageId>
+    <Authors>Christian Findlay</Authors>
+    <Product>SimpleTabControl</Product>
+    <Description>A simple Tab Control for Uno Platform</Description>
+    <Copyright>© Christian Findlay 2020</Copyright>
+    <PackageProjectUrl>https://github.com/MelbourneDeveloper/SimpleTabControl</PackageProjectUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>    
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
@@ -16,5 +25,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Uno.UI" Version="3.0.12" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
